// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Textarea (snapshot) merges className 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm mt-4"
/>
`;

exports[`Textarea (snapshot) renders aria-invalid textarea 1`] = `
<textarea
  aria-invalid="true"
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  placeholder="Invalid"
/>
`;

exports[`Textarea (snapshot) renders default textarea 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  placeholder="Type here"
/>
`;

exports[`Textarea (snapshot) renders disabled textarea 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  disabled=""
  placeholder="Disabled"
/>
`;
